# scrypt0

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  scrypt_1.0.orig.tar.gz.delta  scrypt_1.0.orig.tar.gz.id  scrypt_1.1.1.orig.tar.gz.delta  scrypt_1.1.1.orig.tar.gz.id  scrypt_1.1.2.orig.tar.gz.delta  scrypt_1.1.2.orig.tar.gz.id  scrypt_1.1.3.orig.tar.gz.delta  scrypt_1.1.3.orig.tar.gz.id  scrypt_1.1.4.orig.tar.gz.delta  scrypt_1.1.4.orig.tar.gz.id  scrypt_1.1.5.orig.tar.gz.delta  scrypt_1.1.5.orig.tar.gz.id  scrypt_1.1.6+svn18.orig.tar.gz.delta  scrypt_1.1.6+svn18.orig.tar.gz.id  scrypt_1.1.6+svn31.orig.tar.gz.delta  scrypt_1.1.6.orig.tar.gz.delta  scrypt_1.1.6.orig.tar.gz.id  scrypt_1.1.orig.tar.gz.delta  scrypt_1.1.orig.tar.gz.id  scrypt_1.2.0.orig.tar.gz.delta  scrypt_1.2.0.orig.tar.gz.id
autocrap/: Makefile.am  configure.ac
debian/: .gitignore  changelog  control  copyright  menu  rules  watch
debian/patches/: 0001-configure.ac-version.patch  0002-automake-options.patch  0003-automake-standards.patch  0003-configure.ac-clock_gettime.patch  0003-configure.ac-include-acscrypt.m4.patch  0004-Makefile.am-EXTRA_DIST.patch  0004-configure.ac-clock_gettime.patch  0004-configure.ac-updates.patch  0005-AM_MAINTAINER_MODE.patch  0005-configure.ac-CHECK_SYSCTL_HW_USERMEM.patch  0006-AM_PROG_AR.patch  0006-configure.ac-libcrypto.patch  0006-crypt-search.patch  0007-automake-standards.patch  0007-configure.ac-clock_gettime.patch  0008-libcrypto.patch  0008-warnings.patch  0009-Makefile.am-sse2.patch  0009-compiler-warnings.patch  0010-Makefile.am-EXTRA_DIST.patch  0010-configure.ac-boilerplate.patch  0011-configure.ac-standardize.patch  0012-configure.ac-detect-sse2.patch  series
